--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -24,6 +24,6 @@ jobs:
     - name: Restore dependencies
       run: dotnet restore ./SolarWatch
     - name: Build
-      run: dotnet build --no-restore
+      run: dotnet build --no-restore --output ./SolarWatch
     - name: Test
       run: dotnet test --no-build --verbosity normal 
