fix: add folder to the .net restore command 2

--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -23,7 +23,10 @@ jobs:
         dotnet-version: 6.0.x
     - name: Restore dependencies
       run: dotnet restore ./SolarWatch
+
     - name: Build
-      run: dotnet build --no-restore --output ./SolarWatch
+      run: dotnet build --no-restore
+      working-directory: ./SolarWatch
+
     - name: Test
       run: dotnet test --no-build --verbosity normal 
