--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -29,4 +29,5 @@ jobs:
       working-directory: ./SolarWatch
 
     - name: Test
-      run: dotnet test --no-build --verbosity normal 
+      run: dotnet test --no-build --verbosity normal
+      working-directory: ./SolarWatchTest
